# pdi

./: Answer_1.txt  CMakeLists.txt  README.md  addweighted.cpp  autocorrection.cpp  bolhas.cpp  canny.cpp  equalize.cpp  example.cpp  filtroespacial.cpp  gabarito.cpp  gabarito.txt  histogram.cpp  homomorphic.cpp  img  k-means.cpp  laplgauss.cpp  motiondetector.cpp  negative.cpp  pointillism-sample.cpp  pointillism.cpp  tiltyshift.cpp  tiltyshiftvideo.cpp  troca_regioes.cpp
docs/: chapter_1.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
docs/img/: Planilha de Acompanhamento.xlsx  ~$Projeto DESTINE 19 .xlsx
docs/unit1/: bolhas.html  equalization.html  lapl_gauss.html  list.html  motiondetector.html  negative.html  swap_regions.html  tiltyshift.html
docs/unit2/: homomorphic.html  k-means.html  list.html  pointillism.html
mdbook/: book.toml
mdbook/src/: SUMMARY.md  chapter_1.md  introduction.md
mdbook/src/Final Project/: project.md
mdbook/src/unit1/: bolhas.md  equalization.md  lapl_gauss.md  list.md  motiondetector.md  negative.md  pointillism.md  swap_regions.md  tiltyshift.md
mdbook/src/unit2/: homomorphic.md  k-means.md  kmeans.md  list.md  pointilism.md
